# fugle-trade-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
examples/: index.py  index2.py  init.py
fugle_trade/: constant.py  init.py  order.py  sdk.py  util.py  websocket.py
tests/: config.txt  conftest.py  test_core.py  test_request.py
tests/fugle_trade_core/: fugle_trade_core.py
tests/fugle_trade_core/fixtures/: message-connect.txt  message-order.txt  message-trade.txt  response-balance.txt  response-cert-info.txt  response-inventories.txt  response-key-info.txt  response-login.txt  response-machine-time.txt  response-market-status.txt  response-modify.txt  response-orders-history.txt  response-orders.txt  response-place-order.txt  response-replace-order.txt  response-settlements.txt  response-trade-status.txt  response-transactions.txt
tests/keyring/: __init__.py
tests/keyrings/cryptfile/: cryptfile.py
