[tool.poetry]
name = "fugle-trade"
version = "0.2.7"
description = ""
authors = ["bistin <bistin@fugle.tw>"]


[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.7"
websocket-client = "1.2.1"
keyring = "23.5.0"
"keyrings.cryptfile" = "1.3.8"
fugle-trade-core = "0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
