[tool.poetry]
name = "fugle-trade"
version = "1.1.2"
description = ""
authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fugle-dev/fugle-trade-python#readme"
repository = "https://github.com/fugle-dev/fugle-trade-python"
documentation = "https://developer.fugle.tw/docs/trading/intro"
keywords = ["fugle", "trade", "stock"]


[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.7"
websocket-client = "^1.2.1"
keyring = "23.5.0"
"keyrings.cryptfile" = "1.3.8"
fugle-trade-core = "2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
